# bifrost

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  IMPLEMENTATION_HANDOFF.md  build.sh  debug.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  opencode.json  requirements.txt  setup.sh  test.sh
api/: Dockerfile  Dockerfile.dev  bifrost.py  pyproject.toml  pyrightconfig.json  pytest.ini
api/alembic/: env.py
api/alembic/versions/: 20251209_193337_add_launch_workflow_id_to_forms.py  20251210_180444_add_is_workflow_is_data_provider_to_.py  20251218_143514_add_agent_system_tables.py  20251218_200000_make_conversation_agent_id_nullable.py  20251219_212810_add_execution_id_to_messages.py  20251225_022637_drop_developer_api_keys_table.py  20251225_100000_add_knowledge_store_table.py  20251226_000000_add_ai_usage_tracking.py  20260109_add_stuck_status.py  (+44 more)
api/bifrost/: __init__.py  __main__.py  _context.py  _logging.py  _sync.py  _write_buffer.py  ai.py  cli.py  client.py  config.py  credentials.py  decorators.py  email.py  executions.py  files.py  forms.py  integrations.py  knowledge.py  manifest.py  models.py  organizations.py  pyproject.toml  roles.py  sync.py  tables.py  users.py  webhooks.py  workflows.py
api/bifrost_cli/: __init__.py  main.py
api/scripts/: init_container.py  migrate_app_files_to_s3.py
api/shared/: async_executor.py  decorators.py  discovery.py  discovery_watcher.py  rabbitmq.py  type_inference.py
api/src/: config.py  main.py
api/stubs/: bifrost.pyi
api/tests/: README.md  conftest.py
(+1193 files in other folders)
